<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:id="@+id/nameLabel"
            android:labelFor="@+id/editName"
            android:text="@string/recipeNameLabel"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:id="@+id/editName"
            android:textSize="14sp"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:id="@+id/categoryLabel"
            android:labelFor="@+id/editCategory"
            android:text="@string/recipeCategoryLabel"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:id="@+id/editCategory"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:id="@+id/totalTimeLabel"
            android:labelFor="@+id/editTotalTime"
            android:text="@string/recipeTotalTimeLabel"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:id="@+id/editTotalTime"
            android:textSize="14sp"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:id="@+id/ingredientsLabel"
            android:labelFor="@+id/editIngredients"
            android:text="@string/recipeIngredientsLabel"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:id="@+id/editIngredients"
            android:textSize="14sp"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:id="@+id/instructionsLabel"
            android:labelFor="@+id/editInstructions"
            android:text="@string/recipeInstructionsLabel"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:id="@+id/editInstructions"
            android:textSize="14sp"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:id="@+id/createButton"
            android:text="@string/action_create"
            android:onClick="createRecipe" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:id="@+id/cancelButton"
            android:text="@string/action_cancel"
            android:onClick="cancel" />

    </LinearLayout>

</LinearLayout>